crates/compiler/snapshots/vue_template_compiler__core__tokenizer__test__raw_text-6.snap
---
source: src/core/tokenizer.rs
expression: t

---
- StartTag:
    name: style
    attributes: []
    self_closing: false
- Text:
    raw: abc
    ops:
      bits: 0
- EndTag: style

