crates/compiler/snapshots/vue_template_compiler__core__tokenizer__test__rc_data.snap
---
source: src/core/tokenizer.rs
expression: ret

---
- StartTag:
    name: textarea
    attributes: []
    self_closing: false
- Text:
    raw: "   "
    ops:
      bits: 2

